// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Button 1`] = `
<button
  className="button base work primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold base capitalize base"
  >
    Submit
  </span>
</button>
`;

exports[`renders a Button that is just an icon 1`] = `
<button
  aria-label="Person"
  className="button base onlyIcon work primary"
  disabled={false}
  type="button"
>
  <svg
    className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
    data-testid="user"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className=""
      d="M683.334 424.081c0-94.349-76.487-170.834-170.834-170.834-94.349 0-170.834 76.485-170.834 170.834 0 94.347 76.485 170.834 170.834 170.834 94.347 0 170.834-76.487 170.834-170.834zM597.917 424.081c0 47.176-38.241 85.416-85.416 85.416s-85.416-38.241-85.416-85.416c0-47.174 38.241-85.416 85.416-85.416s85.416 38.242 85.416 85.416zM939.585 509.498c0 235.869-191.214 427.084-427.084 427.084-235.872 0-427.084-191.214-427.084-427.084 0-235.872 191.212-427.084 427.084-427.084 235.869 0 427.084 191.212 427.084 427.084zM512.5 851.164c62.755 0 121.557-16.917 172.093-46.441-88.748-79.63-163.377-89.124-221.007-75.411-48.419 11.522-91.318 40.799-126.023 73.732 51.171 30.558 111.002 48.12 174.937 48.12zM443.812 646.22c94.215-22.422 199.99 2.383 309.452 105.699 62.316-61.893 100.903-147.651 100.903-242.422 0-188.697-152.968-341.667-341.667-341.667s-341.667 152.969-341.667 341.667c0 93.741 37.751 178.666 98.88 240.397 43.484-43.37 102.338-86.6 174.099-103.674z"
    />
  </svg>
  <span
    className="base extraBold base capitalize base"
  />
</button>
`;

exports[`renders a Button with a link and opens in new tab 1`] = `
<a
  className="button base work primary"
  disabled={false}
  href="💩.com"
  target="_blank"
>
  <span
    className="base extraBold base capitalize base"
  >
    Submit
  </span>
</a>
`;

exports[`renders a Button with a loading state 1`] = `
<button
  className="button base work primary loading"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold base capitalize base"
  >
    Adding
  </span>
</button>
`;

exports[`renders a Button with an icon 1`] = `
<button
  className="button base hasIconAndLabel work primary"
  disabled={false}
  type="button"
>
  <svg
    className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
    data-testid="add"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className=""
      d="M512.5 125.122c-23.588 0-42.709 19.122-42.709 42.709v298.959h-298.959c-23.587 0-42.709 19.121-42.709 42.709s19.122 42.709 42.709 42.709h298.959v298.959c0 23.588 19.121 42.709 42.709 42.709s42.709-19.121 42.709-42.709v-298.959h298.959c23.588 0 42.709-19.121 42.709-42.709s-19.121-42.709-42.709-42.709h-298.959v-298.959c0-23.587-19.121-42.709-42.709-42.709z"
    />
  </svg>
  <span
    className="base extraBold base capitalize base"
  >
    Add
  </span>
</button>
`;

exports[`renders a Button with an icon on the right 1`] = `
<button
  className="button base hasIconAndLabel iconOnRight work primary"
  disabled={false}
  type="button"
>
  <svg
    className="ZDlJU6tECg7ouG-b27gya _3ctOeOMP7zLhU37n25xoZC"
    data-testid="add"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className=""
      d="M512.5 125.122c-23.588 0-42.709 19.122-42.709 42.709v298.959h-298.959c-23.587 0-42.709 19.121-42.709 42.709s19.122 42.709 42.709 42.709h298.959v298.959c0 23.588 19.121 42.709 42.709 42.709s42.709-19.121 42.709-42.709v-298.959h298.959c23.588 0 42.709-19.121 42.709-42.709s-19.121-42.709-42.709-42.709h-298.959v-298.959c0-23.587-19.121-42.709-42.709-42.709z"
    />
  </svg>
  <span
    className="base extraBold base capitalize base"
  >
    Add
  </span>
</button>
`;

exports[`renders a Link as a Button for routing 1`] = `
<a
  className="button base work primary"
  disabled={false}
  href="/jobber"
  onClick={[Function]}
>
  <span
    className="base extraBold base capitalize base"
  >
    Adding
  </span>
</a>
`;

exports[`renders a destructuve Button 1`] = `
<button
  className="button base destructive primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold base capitalize base"
  >
    Submit
  </span>
</button>
`;

exports[`renders a disabled Button 1`] = `
<button
  className="button base work primary disabled"
  disabled={true}
  type="button"
>
  <span
    className="base extraBold base capitalize base"
  >
    Submit
  </span>
</button>
`;

exports[`renders a large Button 1`] = `
<button
  className="button large work primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold large capitalize base"
  >
    Add
  </span>
</button>
`;

exports[`renders a learning Button 1`] = `
<button
  className="button base learning primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold base capitalize base"
  >
    Submit
  </span>
</button>
`;

exports[`renders a secondary Button 1`] = `
<button
  className="button base work secondary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold base capitalize base"
  >
    Submit
  </span>
</button>
`;

exports[`renders a small Button 1`] = `
<button
  className="button small work primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold small capitalize base"
  >
    Add
  </span>
</button>
`;

exports[`renders a subtle Button 1`] = `
<button
  className="button base subtle primary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold base capitalize base"
  >
    Submit
  </span>
</button>
`;

exports[`renders a tertiary Button 1`] = `
<button
  className="button base work tertiary"
  disabled={false}
  type="button"
>
  <span
    className="base extraBold base capitalize base"
  >
    Submit
  </span>
</button>
`;
